# pyls

./: .gitignore  README.md  main.py  pyproject.toml
parser/: parser.py
pyls/: __main__.py  aggregator.py  formatter.py  parser.py  pyls.py
tests/: test_formatter.py  test_parser.py  test_utils.py
utils/: utils.py
